# wg-meshconf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  database.json  publish.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  wireguard_mesh_configurator.py
output/: host1.conf  host2.conf  host3.conf
src/: database_manager.py  profilemanager.py  wg-meshconf  wireguard.py  wireguard_mesh_configurator.py
wg_meshconf/: __init__.py  __main__.py  database_manager.py  requirements.txt  wg_meshconf.py  wireguard.py
