[metadata]
name = wg-meshconf
version = 2.5.0
author = K4YT3X
author_email = k4yt3x@k4yt3x.com
license = GNU General Public License v3.0
description = A tool that helps you to generate peer configuration files for WireGuard mesh networks
url = https://github.com/k4yt3x/wg-meshconf
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Security :: Cryptography
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires = cryptography; rich
python_requires = >=3.6

[options.entry_points]
console_scripts = wg-meshconf = wg_meshconf:main
